<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <POU Name="S14_LabelChecking" Id="{de280412-b784-48ff-b9e4-45ab603ab4a3}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM S14_LabelChecking
VAR
	//工站
	station					: REFERENCE TO FB_Station:=fbstation[14];
	
//气缸
	fbHOZCyl_1			:REFERENCE TO FB_Cylinder:=fbCylinder[37];	//	推料气缸1
	fbHOZCyl_2			:REFERENCE TO FB_Cylinder:=fbCylinder[38];	//	推料气缸2
//相机
	Camera   : 	 REFERENCE TO FB_Camera:=fbCamera[18]; 
	
	//延时
	arTonDelay :ARRAY[1..20] OF TON;
	//返回值
	UdiReturnValue :ARRAY[1..20] OF UDINT;
	i: INT;
 //传感器
	arxBoxCheckSensor: ARRAY[1..2] OF BOOL;
	// //需要推到NG位置
	xNGFlag: BOOL;
	//运行结束
	XFlowAutoDone:BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[A_Input();
Alarm();
Delay();
FlowAuto();
FlowInit();
General();
ILC();
TipAuto();
TipManual();
Z_Output();]]></ST>
    </Implementation>
    <Action Name="A_Input" Id="{56ab53d4-cea4-4110-a800-d493a02bd0e3}">
      <Implementation>
        <ST><![CDATA[//气缸
fbHOZCyl_1.xWP_Sensor:=					IxS12HOZCyl_1WP;//	贴标检测工位¶推料气缸1¶动点
fbHOZCyl_1.xHP_Sensor:=					IxS12HOZCyl_1HP;//	贴标检测工位¶推料气缸1¶原点
fbHOZCyl_2.xWP_Sensor:=					IxS12HOZCyl_2HP;//	贴标检测工位¶推料气缸2¶动点
fbHOZCyl_2.xHP_Sensor:=					IxS12HOZCyl_2WP;//	贴标检测工位W推料气缸2¶原点

//传感器
arxBoxCheckSensor[1] :=IxS12SensorReached;	//相机检测处





  



]]></ST>
      </Implementation>
    </Action>
    <Action Name="Alarm" Id="{fcf10fe8-b45b-4f97-aec1-69d4e3dfa417}">
      <Implementation>
        <ST><![CDATA[//
station.adwAlarm[1].00:=station.xInitTimeout;	  			//S08Label 初始化超时
//station.adwAlarm[1].01:=TRUE;	  			//S14贴标工位相机检测超时，请检查	
]]></ST>
      </Implementation>
    </Action>
    <Action Name="Delay" Id="{7bc9ee60-9b9c-4a53-b951-82315c5dc169}">
      <Implementation>
        <ST><![CDATA[(*arTonDelay[01](IN:= , PT:=T#0.1S , Q=> , ET=> );*)//TipAuto使用
arTonDelay[02](IN:= 	station.iStepAuto=60 , PT:=T#1S , Q=> , ET=> );//已使用
arTonDelay[03](IN:=   , PT:=T#1S , Q=> , ET=> );
arTonDelay[04](IN:= , PT:=T#0.1S , Q=> , ET=> );
arTonDelay[05](IN:= , PT:=T#0.1S , Q=> , ET=> );
arTonDelay[06](IN:= , PT:=T#0.1S , Q=> , ET=> );
arTonDelay[07](IN:= , PT:=T#0.1S , Q=> , ET=> );
arTonDelay[08](IN:= , PT:=T#0.1S , Q=> , ET=> );
arTonDelay[09](IN:= , PT:=T#0.1S , Q=> , ET=> );
















]]></ST>
      </Implementation>
    </Action>
    <Action Name="FlowAuto" Id="{8d9b9938-1bf2-4828-8e60-c95a62abe4d7}">
      <Implementation>
        <ST><![CDATA[
//-----------------------------------------初始化是否完成判断----------------------------------------------
IF NOT station.xInitDone 
THEN
 	station.iStepAuto:=0;
 	station.xDone:=FALSE;
	station.xRunningOffProhibit := FALSE ;//运行中信号Off禁止
ELSIF station.xRunning  OR   station.xRunningOffProhibit
THEN
//-----------------------------------------动作步骤--------------------------------------------------------
CASE station.iStepAuto OF	  
	0: //----Home Step，等待启动----
		IF station.xDisabled 
			AND station.xCanRun 
			AND NOT fbMachine[1].xStopped 
			AND NOT station.xSingleRunning 
		THEN
			station.xDone:=TRUE;
		END_IF
		
		IF  station.xSingleRunning 
			OR station.xCanRun 
			AND NOT station.xDone 
			AND NOT station.xDisabled 
			AND NOT fbMachine[1].xStopped
		THEN
			station.xCycleEnable:=TRUE;
			station.xDone:= FALSE;  
			station.xRunningOffProhibit := TRUE ;//运行中信号Off禁止
			station.iStepAuto:= 10;
		END_IF
  10: //复位数据 
			xFlowAutoDone:=FALSE;	
			xNGFlag:=FALSE;
			sCamera_TO_Plc.iS13Result[1]:=0;
			station.iStepAuto:=20;
	20://等待传感器检测
			IF  arxBoxCheckSensor[1]  THEN
					station.iStepAuto:=30;
			END_IF
	30://水平阻挡气缸伸出
				fbHOZCyl_1.xAuto:=TRUE;
			IF	fbHOZCyl_1.xWP_Delay THEN
			 	station.iStepAuto:=40;
			END_IF
	40://阻挡气缸下降
			fbHOZCyl_2.xAuto:=FALSE;
			IF	fbHOZCyl_2.xHP_Delay THEN
			 	station.iStepAuto:=50;
			END_IF
	50://收回水平阻挡气缸
				fbHOZCyl_1.xAuto:=FALSE;
			IF	fbHOZCyl_1.xHP_Delay THEN
			 	station.iStepAuto:=60;
			END_IF
	60://等待
				IF   arTonDelay[02].Q THEN
							station.iStepAuto:=70;
				END_IF
	70://相机检测
				Camera.xlTrigger:=TRUE;
					station.iStepAuto:=75;
	75://等待相机响应
			IF    Camera.xQBusy THEN
				station.iStepAuto:=80;	
			END_IF
	80://等待相机完成
			 IF   Camera.xQDone THEN
				 station.iStepAuto:=90;	
			 ELSIF Camera.xQAlarm THEN
					Camera.xlInit:=TRUE;
					station.iStepAuto:=70;
					station.adwAlarm[1].01:=TRUE;	//S14贴标工位相机检测超时，请检查	
			 END_IF
	90://处理相机结果
			IF 	sCamera_TO_Plc.iS13Result[1] =1  THEN
				//相机拍照结果， 1=OK 2=NG，触发前PLC清除	
					xNGFlag:=FALSE;
					station.iStepAuto:=100;
			ELSIF sCamera_TO_Plc.iS13Result[1] =2 THEN
			 		xNGFlag:=TRUE;
			 		station.iStepAuto:=100;
			END_IF
	100://阻挡气缸抬起
			fbHOZCyl_2.xAuto:=TRUE;
			IF	fbHOZCyl_2.xWP_Delay THEN
			 	station.iStepAuto:=110;
			END_IF
	110://等待传感器
			IF  NOT  arxBoxCheckSensor[1] THEN
			 		station.iStepAuto:=999;
			END_IF
	
	999://----Single Run Finish----
		xFlowAutoDone:=TRUE;	
		station.iStepAuto :=0;
		IF NOT station.xSingleContinuousRun THEN
			station.xSingleRunFlag:=FALSE;
		END_IF
		
		station.xCycleEnable:=FALSE;	
	//	station.xDone:=TRUE;
		station.xRunningOffProhibit := FALSE ;//运行中信号Off禁止
	ELSE
		;	
END_CASE



END_IF]]></ST>
      </Implementation>
    </Action>
    <Action Name="FlowInit" Id="{35086538-cb4c-4ee9-b035-5fd976ee42d9}">
      <Implementation>
        <ST><![CDATA[IF NOT station.xIniting THEN
  station.iStepInit:=0;    
ELSE
//--------------------------------------------初始化步序----------------------------------
CASE station.iStepInit OF	
 0://  
  	IF station.xIniting THEN	
  	  station.iStepInit:=10;	
  	END_IF	
10://复位数据
    station.iStepInit:=20;	
20://阻挡气缸回原
			fbHOZCyl_1.xInit:=TRUE;
	  	fbHOZCyl_2.xInit:=TRUE;
		IF  fbHOZCyl_1.xHP_Delay  AND 
				fbHOZCyl_2.xHP_Delay THEN
				station.iStepInit:=999;	
		END_IF
999://初始化完成	
	station.iStepInit:=0;
	station.xInitDone:=TRUE;  
END_CASE
END_IF
]]></ST>
      </Implementation>
    </Action>
    <Action Name="General" Id="{4e5f5ae7-ceae-48cf-bdf4-41d615a5187b}">
      <Implementation>
        <ST><![CDATA[
]]></ST>
      </Implementation>
    </Action>
    <Action Name="ILC" Id="{dd4987fb-dc61-471e-a124-46223fbf39d1}">
      <Implementation>
        <ST><![CDATA[
//---------------------------------------------------工站可执行-------------------------------------------------------
station.xCanRun :=TRUE ;

//---------------------------------------------------气缸动作条件-------------------------------------------
fbHOZCyl_1.xOffILC	:=	TRUE	;
fbHOZCyl_1.xOnILC	:=	TRUE; 

fbHOZCyl_2.xOffILC	:=	TRUE	;
fbHOZCyl_2.xOnILC	:=	TRUE; 


//---------------------------------------------------伺服动作条件-------------------------------------------

Camera.xIDeviceRunning:=TRUE;
]]></ST>
      </Implementation>
    </Action>
    <Action Name="TipAuto" Id="{b36dece4-89a1-4636-a437-523951c4d470}">
      <Implementation>
        <ST><![CDATA[
//------------------------------------------------AutoTip Cylinder--------------------------------
	
//------------------------------------------------AutoTip Servo--------------------------------
//**************************************

]]></ST>
      </Implementation>
    </Action>
    <Action Name="TipManual" Id="{1ef57cb0-c9a2-486b-9130-6b768818a287}">
      <Implementation>
        <ST><![CDATA[//--------------------------------------------ManualTip------------------------------------------------------

//-------------------------------------------气缸提示---------------------------------------------------------




/////////////////////////////////////////////////////////////////////////////////////////////////////////////////
]]></ST>
      </Implementation>
    </Action>
    <Action Name="Z_Output" Id="{c52e7128-5f2e-405f-a9f7-d94ed1c780d1}">
      <Implementation>
        <ST><![CDATA[(**************************气缸输出********************************)
QxS12HOZCyl_1WP	:=fbHOZCyl_1.xWP_Valve;//	贴标检测工位¶推料气缸1¶动点
QxS12HOZCyl_1HP	:=fbHOZCyl_1.xHP_Valve;//	贴标检测工位¶推料气缸1¶原点
QxS12HOZCyl_2WP	:=fbHOZCyl_2.xWP_Valve;//	贴标检测工位¶推料气缸2¶动点
QxS12HOZCyl_2HP	:=fbHOZCyl_2.xHP_Valve;//	贴标检测工位¶推料气缸2¶原点
]]></ST>
      </Implementation>
    </Action>
    <LineIds Name="S14_LabelChecking">
      <LineId Id="23" Count="8" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="S14_LabelChecking.A_Input">
      <LineId Id="28" Count="0" />
      <LineId Id="69" Count="0" />
      <LineId Id="67" Count="1" />
      <LineId Id="54" Count="0" />
      <LineId Id="71" Count="0" />
      <LineId Id="70" Count="0" />
      <LineId Id="72" Count="0" />
      <LineId Id="74" Count="0" />
      <LineId Id="65" Count="0" />
      <LineId Id="55" Count="0" />
      <LineId Id="40" Count="1" />
      <LineId Id="10" Count="3" />
      <LineId Id="8" Count="0" />
    </LineIds>
    <LineIds Name="S14_LabelChecking.Alarm">
      <LineId Id="176" Count="1" />
      <LineId Id="262" Count="0" />
      <LineId Id="266" Count="0" />
    </LineIds>
    <LineIds Name="S14_LabelChecking.Delay">
      <LineId Id="64" Count="10" />
      <LineId Id="44" Count="13" />
      <LineId Id="40" Count="0" />
    </LineIds>
    <LineIds Name="S14_LabelChecking.FlowAuto">
      <LineId Id="1155" Count="5" />
      <LineId Id="1253" Count="0" />
      <LineId Id="1161" Count="4" />
      <LineId Id="1167" Count="15" />
      <LineId Id="1452" Count="0" />
      <LineId Id="1183" Count="1" />
      <LineId Id="1256" Count="0" />
      <LineId Id="1555" Count="0" />
      <LineId Id="1538" Count="0" />
      <LineId Id="1479" Count="0" />
      <LineId Id="1259" Count="0" />
      <LineId Id="1456" Count="0" />
      <LineId Id="1458" Count="2" />
      <LineId Id="1501" Count="0" />
      <LineId Id="1504" Count="2" />
      <LineId Id="1503" Count="0" />
      <LineId Id="1508" Count="3" />
      <LineId Id="1507" Count="0" />
      <LineId Id="1526" Count="3" />
      <LineId Id="1525" Count="0" />
      <LineId Id="1512" Count="0" />
      <LineId Id="1547" Count="2" />
      <LineId Id="1500" Count="0" />
      <LineId Id="1467" Count="0" />
      <LineId Id="1557" Count="0" />
      <LineId Id="1556" Count="0" />
      <LineId Id="1468" Count="0" />
      <LineId Id="1470" Count="4" />
      <LineId Id="1550" Count="3" />
      <LineId Id="1466" Count="0" />
      <LineId Id="1476" Count="0" />
      <LineId Id="1478" Count="0" />
      <LineId Id="1475" Count="0" />
      <LineId Id="1484" Count="0" />
      <LineId Id="1487" Count="0" />
      <LineId Id="1431" Count="0" />
      <LineId Id="1485" Count="0" />
      <LineId Id="1488" Count="0" />
      <LineId Id="1481" Count="0" />
      <LineId Id="1210" Count="0" />
      <LineId Id="1493" Count="0" />
      <LineId Id="1495" Count="2" />
      <LineId Id="1541" Count="3" />
      <LineId Id="1490" Count="0" />
      <LineId Id="1212" Count="2" />
      <LineId Id="1453" Count="2" />
      <LineId Id="1215" Count="2" />
      <LineId Id="1451" Count="0" />
      <LineId Id="1218" Count="6" />
    </LineIds>
    <LineIds Name="S14_LabelChecking.FlowInit">
      <LineId Id="437" Count="9" />
      <LineId Id="461" Count="0" />
      <LineId Id="467" Count="0" />
      <LineId Id="476" Count="0" />
      <LineId Id="469" Count="0" />
      <LineId Id="472" Count="0" />
      <LineId Id="477" Count="0" />
      <LineId Id="473" Count="1" />
      <LineId Id="462" Count="4" />
      <LineId Id="436" Count="0" />
    </LineIds>
    <LineIds Name="S14_LabelChecking.General">
      <LineId Id="361" Count="0" />
      <LineId Id="381" Count="0" />
    </LineIds>
    <LineIds Name="S14_LabelChecking.ILC">
      <LineId Id="234" Count="4" />
      <LineId Id="308" Count="4" />
      <LineId Id="302" Count="0" />
      <LineId Id="307" Count="0" />
      <LineId Id="290" Count="0" />
      <LineId Id="244" Count="0" />
      <LineId Id="274" Count="0" />
      <LineId Id="313" Count="0" />
    </LineIds>
    <LineIds Name="S14_LabelChecking.TipAuto">
      <LineId Id="118" Count="0" />
      <LineId Id="141" Count="0" />
      <LineId Id="145" Count="0" />
      <LineId Id="148" Count="1" />
      <LineId Id="178" Count="0" />
      <LineId Id="183" Count="0" />
    </LineIds>
    <LineIds Name="S14_LabelChecking.TipManual">
      <LineId Id="137" Count="1" />
      <LineId Id="176" Count="0" />
      <LineId Id="262" Count="1" />
      <LineId Id="246" Count="0" />
      <LineId Id="156" Count="0" />
      <LineId Id="55" Count="0" />
      <LineId Id="41" Count="0" />
    </LineIds>
    <LineIds Name="S14_LabelChecking.Z_Output">
      <LineId Id="2" Count="0" />
      <LineId Id="24" Count="2" />
      <LineId Id="23" Count="0" />
      <LineId Id="20" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>